# termsize

./: .#appveyor.yml  .appveyor.yml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  appveyor.yml  index.html  search-index.js
.github/workflows/: ci.yml  main.yml
examples/: ts.rs  ts.rs.bk
implementors/core/fmt/: trait.Debug.js
src/: lib.rs  lib.rs.bk  nix.rs  nix.rs.bk  other.rs  redox.rs  redox.rs.bk  win.rs  win.rs.bk
src/termsize/: lib.rs.html  nix.rs.html
termsize/: fn.get.html  index.html  sidebar-items.js  struct.Size.html
termsize/nix/: fn.get.html
