[package]
name = "termsize"
version = "0.1.4"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Retrieves terminal size"
repository = "https://github.com/softprops/termsize"
homepage = "https://github.com/softprops/termsize"
documentation = "http://softprops.github.io/termsize"
keywords = ["tty", "terminal", "term", "size", "dimensions"]
license = "MIT"

[target.'cfg(unix)'.dependencies]
atty = "0.1"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"

[target.'cfg(target_os = "redox")'.dependencies]
termion = "1.5"
