[package]
name = "termsize"
version = "0.1.7"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Retrieves terminal size"
repository = "https://github.com/softprops/termsize"
homepage = "https://github.com/softprops/termsize"
documentation = "http://softprops.github.io/termsize"
keywords = ["tty", "terminal", "term", "size", "dimensions"]
license = "MIT"
readme = "README.md"
edition = "2021"

#[badges]
#travis-ci = { repository = "softprops/termsize" }
#coveralls = { repository = "softprops/termsize" }

[target.'cfg(unix)'.dependencies]
atty = "0.2"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "fileapi", ""] }
