[package]
name = "termsize"
version = "0.1.8"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Retrieves terminal size"
repository = "https://github.com/softprops/termsize"
homepage = "https://github.com/softprops/termsize"
documentation = "http://softprops.github.io/termsize"
keywords = ["tty", "terminal", "term", "size", "dimensions"]
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.70"

#[badges]
#travis-ci = { repository = "softprops/termsize" }
#coveralls = { repository = "softprops/termsize" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "fileapi", "wincon"] }
